--- a/app/assets/javascripts/backbone/templates/dashboard/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/index.jst.ejs
@@ -1,5 +1,5 @@
 <div class="content-container dashboard-content container">
-  <div class="content-left">
+  <div class="content-left fixed dashboard-padded-top">
     <div id="dashboard-organizations-list"></div>
     <ul id="dashboard-menu" class="left-list"></ul>
   </div>
