--- a/app/assets/javascripts/backbone/templates/dashboard/groups/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/groups/show.jst.ejs
@@ -1,6 +1,13 @@
-<tr class="dashboard-group">
-  <td><%= group.get("name") %></td>
-  <td><%= group.get("users").length %> Members</td>
-  <td><%= group.get("events").length %> Events</td>
-  <td><a href="#dashboard/<%= organization.get('slug') %>/groups/<%= group.get('slug') %>">Show</a></td>
-</tr>
+<div class="dashboard-group-header">
+  <h3><%= name %></h4>
+</div>
+
+<form class="dashboard-group-form">
+  <label name="name">Group Name</label>
+  <input name="name" type="text" value="<%= name %>"></input>
+  <label name="apps_email">Google Apps Email</label>
+  <input name="apps_email" type="text" value="<%= apps_email %>" disabled></input>
+  <label name="description">Group Description</label>
+  <textarea name="description"><%= description %></textarea>
+  <input type="submit" value="Update Group"></input>
+</form>
