--- a/app/assets/javascripts/backbone/templates/dashboard/groups/subscribers.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/groups/subscribers.jst.ejs
@@ -1,16 +1,11 @@
 <h3>Subscribers</h3>
 <table class="table-striped">
-  <tr>
-    <th>Name</th>
-    <th>Email</th>
-    <th>Access</th>
-  </tr>
   <% for( i = 0; i < users.length; i++ ) { %>
     <% var user = users[i] %>
     <tr>
-      <td><%= user.name %></td>
+      <td class="primary"><%= user.name %></td>
       <td><%= user.email %></td>
-      <td></td>
+      <td><% console.log(user); %></td>
     </tr>
   <% } %>
 </table>
