--- a/app/views/admin/categories.html.haml
+++ b/app/views/admin/categories.html.haml
@@ -14,5 +14,5 @@
         %tr
           %td= link_to cat.name, "/#categories/#{cat.id}"
           %td= cat.events.count
-          %td= cat.subscribers.count
+          %td= cat.users.count
           %td= cat.description
