--- a/app/assets/javascripts/backbone/templates/dashboard/groups/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/groups/index.jst.ejs
@@ -1,20 +1,26 @@
 <div class="dashboard-content-nav fixed-lined-header">
-  <form class="fixed-header-search">
-    <input placeholder="Search groups..." id="groups-search"
-           class="fixed-header-search-bar"></input>
-  </form>
-  <div class="fixed-header-links">
-    <% if (group) { %>
-      <a href="#dashboard/<%= organization.get('slug') %>/groups/<%= group.get('slug') %>/account" 
+  <% if (organization && group) { %>
+    <h1><%= group.get('name') %></h1>
+    <div class="fixed-header-links">
+      <a href="#dashboard/<%= organization.get('slug') %>/events/<%= group.get('slug') %>" 
+         class="dashboard-header-link">Events</a>
+      <a href="#dashboard/<%= organization.get('slug') %>/groups/<%= group.get('slug') %>/account"
          class="dashboard-header-link">Account</a>
       <a href="#dashboard/<%= organization.get('slug') %>/groups/<%= group.get('slug') %>/subscribers"
          class="dashboard-header-link">Subscribers</a>
-    <% } %>
-    <a href="#dashboard/<%= organization.get('slug') %>/groups/new"
-       class="dashboard-header-link">
-      <span class="icon-plus"/>  Create New Group
-    </a>
-  </div>
+    </div>
+  <% } else { %>
+    <form class="fixed-header-search">
+      <input placeholder="Search groups..." id="groups-search"
+             class="fixed-header-search-bar"></input>
+    </form>
+    <div class="fixed-header-links">
+      <a href="#dashboard/<%= organization.get('slug') %>/groups/new"
+         class="dashboard-header-link">
+        <span class="icon-plus"/>  Create New Group
+      </a>
+    </div>
+  <% } %>
 </div>
 <div class="dashboard-content-main">
   <table id="dashboard-content-groups" class="table-striped"></table>
