--- a/app/views/main/_header.html.erb
+++ b/app/views/main/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="header-container">
     <div class="pull-left">
-      <a href="/">
+      <a href="#">
         <div class="link logo-link">
           <img id="logo" src="/assets/y_logo_200.png" alt="Yale Go" />
         </div>
